# ethereal

./: .gitmodules  CMakeLists.txt
inc/ethereal/: lib.hpp
inc/ethereal/core/: App.hpp  Color.hpp  ECS.hpp  State.hpp  Vector2.hpp  Window.hpp
inc/ethereal/system/: Window.hpp
lib/: CMakeLists.txt
src/core/: App.cpp  Window.cpp
src/system/: Window.cpp
